--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -50,7 +50,7 @@
                       <ul class="menu__list">
                         <li class="menu__item"><a  href="index.html" class="menu__link">Home</a></li>
                         <li class="menu__item"><a href="#hotel" class="menu__link">hotels</a></li>
-                        <li class="menu__item"><a href="about.html" class="menu__link">about us </a></li>
+                        <li class="menu__item"><a href="about.html" class="menu__link">About Company </a></li>
                         <li class="menu__item"><a href="privacypolicy.html" class="menu__link">privacy policy</a></li>
                         <li class="menu__item"><a href="Terms & Conditions.html" class="menu__link">Terms & Conditions</a></li>
                         <li class="menu__item"><a href="contact.html" class="menu__link">contact us</a></li>
