--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -102,7 +102,7 @@
 <div class="item">
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-1.png" alt=""/>
-<h1>Upto 10%</h1><h2>Order now</h2>
+<h1>Upto 100%</h1><h2>View Details</h2>
 </div>
 </div>
 
@@ -111,7 +111,7 @@
 <div class="item">
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-2.png" alt=""/>
-<h1>Upto 20%</h1><h2>Order now</h2>
+<h1>Upto 20%</h1><h2>View Details</h2>
 </div>
 </div>
 
@@ -120,7 +120,7 @@
 <div class="item">
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-3.png" alt=""/>
-<h1>Upto 30%</h1><h2>Order now</h2>
+<h1>Upto 30%</h1><h2>View Details</h2>
 </div>
 </div>
 
@@ -128,7 +128,7 @@
 <div class="item">
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-4.png" alt=""/>
-<h1>Upto 40%</h1><h2>Order now</h2>
+<h1>Upto 40%</h1><h2>View Details</h2>
 </div>
 </div>
 
@@ -136,7 +136,7 @@
 		<div class="item">
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-5.png" alt=""/>
-<h1>Upto 50%</h1><h2>Order now</h2>
+<h1>Upto 50%</h1><h2>View Details</h2>
 </div>
 </div>
 
@@ -151,7 +151,7 @@
 <li>
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-1.png" alt=""/>
-<h1>Upto 30%</h1><h2>Order now</h2>
+<h1>Upto 30%</h1><h2>View Details</h2>
 </div>
 </div>
 </li>
@@ -159,7 +159,7 @@
 <li>
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-2.png" alt=""/>
-<h1>Upto 40%</h1><h2>Order now</h2>
+<h1>Upto 40%</h1><h2>View Details</h2>
 </div>
 </div>
 </li>
@@ -167,7 +167,7 @@
 <li>
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-3.png" alt=""/>
-<h1>Upto 50%</h1><h2>Order now</h2>
+<h1>Upto 50%</h1><h2>View Details</h2>
 </div>
 </div>
 </li>
@@ -175,7 +175,7 @@
 <li>
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-4.png" alt=""/>
-<h1>Upto 60%</h1><h2>Order now</h2>
+<h1>Upto 60%</h1><h2>View Details</h2>
 </div>
 </div>
 </li>
@@ -183,7 +183,7 @@
 <li>
 <div class="bottom_slide_inner">
 <div class="bottom_slide_inner_top"><img src="images/offer-5.png" alt=""/>
-<h1>Upto 70%</h1><h2>Order now</h2>
+<h1>Upto 70%</h1><h2>View Details</h2>
 </div>
 </div>
 </li>
@@ -197,7 +197,7 @@
 
 <div class="right_slide">
 <div class="right_slide_top">
-<h1>Exclusive</h1> <h2>we have</h2>
+<h1>Exclusive</h1> <h2>offers</h2>
 <div class="right_slide_top_right"><a href="#">view more</a></div>
 </div>
 <div class="right_slide_bottom">
