--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -506,10 +506,10 @@ behind the wonderful recipes.  </p>
 <div class="team_section_inn_btm">
 <div class="team_section_inn_btm_inn">
 	<div class="team_section_inn_btm_inn_left">
-	<div class="team_section_inn_btm_inn_left_top"><h1>CEO</h1><h2>manu Krishan</h2></div>
+	<div class="team_section_inn_btm_inn_left_top"><h1>Marketing Manager</h1><h2>Midhulaj K A</h2></div>
 		<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
 	</div>
-		<div class="team_section_inn_btm_inn_right"><img src="images/team/manu.png" alt=""/></div>
+		<div class="team_section_inn_btm_inn_right"><img src="images/team/team-2.png" alt=""/></div>
 	<div class="clear"></div>
 	</div>	
 </div>
@@ -521,7 +521,7 @@ behind the wonderful recipes.  </p>
 <div class="team_section_inn_btm">
 <div class="team_section_inn_btm_inn">
 	<div class="team_section_inn_btm_inn_left">
-	<div class="team_section_inn_btm_inn_left_top"><h1>CEO</h1><h2>Anu Krishan</h2></div>
+	<div class="team_section_inn_btm_inn_left_top"><h1>Founder, CEO</h1><h2>Anu Krishan</h2></div>
 		<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
 	</div>
 		<div class="team_section_inn_btm_inn_right"><img src="images/team/kannan.png" alt=""/></div>
@@ -578,10 +578,10 @@ behind the wonderful recipes.  </p>
 <div class="team_section_inn_btm">
 <div class="team_section_inn_btm_inn">
 	<div class="team_section_inn_btm_inn_left">
-	<div class="team_section_inn_btm_inn_left_top"><h1>Media Head</h1><h2>Praveen R</h2></div>
+	<div class="team_section_inn_btm_inn_left_top"><h1>Developer</h1><h2>Anjali Siji</h2></div>
 		<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
 	</div>
-		<div class="team_section_inn_btm_inn_right"><img src="images/team/praveen.png" alt=""/></div>
+		<div class="team_section_inn_btm_inn_right"><img src="images/team/team-3.png" alt=""/></div>
 	<div class="clear"></div>
 	</div>	
 </div>
@@ -593,10 +593,10 @@ behind the wonderful recipes.  </p>
 <div class="team_section_inn_btm">
 <div class="team_section_inn_btm_inn">
 	<div class="team_section_inn_btm_inn_left">
-	<div class="team_section_inn_btm_inn_left_top"><h1>Data Analyst</h1><h2>Abin Jayan</h2></div>
+	<div class="team_section_inn_btm_inn_left_top"><h1>Marketing</h1><h2>Sonu</h2></div>
 		<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
 	</div>
-		<div class="team_section_inn_btm_inn_right"><img src="images/team/abinjayan.png" alt=""/></div>
+		<div class="team_section_inn_btm_inn_right"><img src="images/team/team-3.png" alt=""/></div>
 	<div class="clear"></div>
 	</div>	
 </div>
@@ -628,13 +628,28 @@ behind the wonderful recipes.  </p>
 	<div class="team_section_inn_btm_inn_left_top"><h1>UI/UX Developer</h1><h2>Akhil Govind</h2></div>
 		<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
 	</div>
-		<div class="team_section_inn_btm_inn_right"><img src="images/team/akhilgovind1.png" alt=""/></div>
+		<div class="team_section_inn_btm_inn_right"><img src="images/team/team-2.png" alt=""/></div>
 	<div class="clear"></div>
 	</div>	
 </div>
 </div>
 
 </div>
+<div class="item">
+	<div class="team_section_inn_inn">
+	<div class="team_section_inn_btm">
+	<div class="team_section_inn_btm_inn">
+		<div class="team_section_inn_btm_inn_left">
+		<div class="team_section_inn_btm_inn_left_top"><h1> Developer</h1><h2>Akshay</h2></div>
+			<div class="team_section_inn_btm_inn_left_btm"><h1>working here is a pleasure and feeling happy</h1></div>
+		</div>
+			<div class="team_section_inn_btm_inn_right"><img src="images/team/team-1.png" alt=""/></div>
+		<div class="clear"></div>
+		</div>	
+	</div>
+	</div>
+	
+	</div>
 
 </div>
 		
