--- a/xhtml/index.html
+++ b/xhtml/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<title>foodoyes</title>
+<title>foodoyes apps</title>
 <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
 <link href="css/foodoyes.css" rel="stylesheet" type="text/css" />
 <link href="css/owl.css" rel="stylesheet" type="text/css" />
@@ -19,18 +19,18 @@
 		<div class="logo_left"> <a href="index.html"><img alt="foodoyes" class="logo-white" src="images/logo.png"  /> </a>  <img alt="foodoyes" class="logo-dark" src="images/logo.png"/> </div>
 		<div class="menu_right_left">
                           <ul>
-                          <li><p class="wow fadeInDown" data-wow-delay="0.5s">+91 9995 698 793</p></li>
-                          <li><p class="wow fadeInDown" data-wow-delay="0.5s">info@foodoyes.com</p></li>
+							<li><p class="wow fadeInDown" data-wow-delay="0.5s">info@foodoyes.com</p></li>
+                          <li><p class="wow fadeInDown" data-wow-delay="0.5s">+91 81390 98793</p></li>
                           </ul>
                           <div class="clear"></div>
                          </div>
 		<div class="menu_right">
 		<div class="bottom_nav_right">
 <ul>
-<li><a class="btn effect1" href="#">foodoyes</a></li>
-<li><a class="btn effect1" href="#">facebook</a></li>
-<li><a class="btn effect1" href="#">instagram</a></li>
-<li><a class="btn effect1" href="#">twitter</a></li>
+<li><a class="btn effect1" target="_blank" href="#">foodoyes</a></li>
+<li><a class="btn effect1" target="_blank" href="https://www.facebook.com/foodoyes">facebook</a></li>
+<li><a class="btn effect1" target="_blank" href="https://instagram.com/foodoyes_official_?igshid=YmMyMTA2M2Y=">instagram</a></li>
+<li><a class="btn effect1" target="_blank" href="https://www.linkedin.com/company/foodoyesapp/">linkedin</a></li>
 </ul>
 </div>
 		</div>
@@ -260,9 +260,9 @@
 <div class="slides1">
     <div id="slide-1">
      <div class="about_section_inn_left_top">
-<h1>get your foods at</h1>
-<h2>1menu price</h2>
-<p>1 we are against the commission system on food. because food is our daily need, respect food and the man 
+<h1>why paying</h1>
+<h2>too much?</h2>
+<p>we are against the commission system on food. because food is our daily need, respect food and the man 
 behind the wonderful recipes.  </p>
 </div>
     </div>
@@ -661,10 +661,10 @@ behind the wonderful recipes.  </p>
 				<h1>are you ready to</h1><h2>associate</h2>
 				</div>
 				<div class="footer_main_left_inner_center"><h1>connect us</h1>
-					<h2> <i class="fas fa-long-arrow-alt-right"></i>  mail@foodoyes.com</h2>
-					<h2><i class="fas fa-long-arrow-alt-right"></i>  +918139098793  </h2></div>
+					<h2> <i class="fas fa-long-arrow-alt-right"></i>  info@foodoyes.com</h2>
+					<h2><i class="fas fa-long-arrow-alt-right"></i>  +91 81390 98793  </h2></div>
 				<div class="footer_main_left_inner_btmm"><i class="far fa-copyright"></i>
-				<p> 2021 Copyright All rights reserved <br>
+				<p> 2022 Copyright All rights reserved <br>
 				Foodoyes apps pvt ltd</p>
 				</div>
 				</div>
